--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <style></style>
 </head>
+<title>六夜的第一次作業-自我介紹'</title>
 <body style="background-color:rgb(231, 200, 200);">
     <div style="color:rgb(70, 33, 33)">
         <h1>第一次作業 自我介紹</h1>
