--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>六夜的第一次作業-自我介紹</title>
     <style></style>
 </head>
-<title>六夜的第一次作業-自我介紹'</title>
 <body style="background-color:rgb(231, 200, 200);">
     <div style="color:rgb(70, 33, 33)">
         <h1>第一次作業 自我介紹</h1>
