--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>六夜的第一次作業-自我介紹</title>
+    <title>VSC第一次作業</title>
     <style></style>
 </head>
 <body style="background-color:rgb(231, 200, 200);">
