--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div style="color:rgb(70, 33, 33)">
         <h1>第一次作業 自我介紹</h1>
     </div>
-    <div style="color:blue;font-weight:bolder">
+    <div style="color:rgb(92, 92, 160);font-weight:bolder">
         <h2>簡單介紹一下自己：</h2>
         <h3>大家好！我是第一次接觸程式的學員，可以叫我六夜(網路上常用的名字)，希望可以在使用VSC上更順手，也想更了解前端工程師的工作！</h3>
     </div>
